# lvgl_wheel

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt
app/KelpBar/: main.c
app/KelpBar/ui/: page_time_setting.c
app/KelpBar/ui/utils/clock/: lv_clock0.c
app/WheelPanel/: lv_conf.h  lv_drv_conf.h  main.c
app/WheelPanel/res/: CMakeLists.txt  res_conf.h
app/WheelPanel/ui/: page_city_setting.c  page_main.c
app/WheelPanel/ui/data/: device_data.c  device_data.h  wheel_data.h
app/WheelPanel/ui/utils/ble/: ble_mesh.c
app/WheelPanel/ui/utils/clock/: lv_clock1.c  lv_clock2.c
app/WheelPanel/ui/utils/uart/: uart_handler.c  uart_handler.h
component/font/: CMakeLists.txt
component/hal/: em_hal_uart.h
component/net/: CMakeLists.txt
component/net/inc/: http_manager.h
component/net/src/: http_manager.c
component/osal/: osal_conf.h  osal_queue.c  osal_queue.h  osal_thread.c
component/player/: audio_player_async.c  audio_player_async.h
component/wifi/: wpa_manager.c  wpa_manager.h
component/wifi/utils/: includes.h  wifimg.h  wpa_debug.h
lvgl/: CMakeLists.txt
platform/t113/: t113.cmake
platform/x86linux/src/: CMakeLists.txt
platform/x86linux/src/hal/: em_hal_uart.c
